# vibecheck

./: .gitignore  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vercel.json
.github/workflows/: test.yml
api/: _supabase.ts  stats.ts  store.ts  submit.ts
api/bundle/: [id].ts
plugin/: README.md  SKILL.md  install.sh
plugin/.claude-plugin/: plugin.json
plugin/commands/: vibes.md  wrapped.md
plugin/scripts/: bundle.sh  extract-prompts.sh  extract-stats.sh  extract-tools.sh  extract-words.sh  generate-url.sh  vibes.py
plugin/tests/: run-tests.sh  test_wrapped.py
plugin/tests/test_helper/: assertions.bash  common.bash
schema/: bundle.schema.json  check-generated.js  generate.js
skill/: README.md  SKILL.md  install.sh
skill/scripts/: bundle_types.py  session_duration.py  vibes.py
skill/tests/: test_install.sh  test_vibes.py  test_wrapped.py
skills/vibechecked/: SKILL.md
skills/vibechecked/references/: analysis-prompts.md
skills/vibechecked/scripts/: extract_stats.py  merge_and_upload.py
src/: App.tsx  DESIGN.md  index.css
src/components/: AnimatedNumber.tsx  GradientBackground.tsx  HeroStat.tsx  MicroLabel.tsx  ShareCard.tsx  SlideLayout.tsx
src/components/viz/: ArcPair.tsx  CircularProgress.tsx  RadialBurst.tsx  index.ts  (+2 more)
src/data/: bundle.generated.ts  decoder.ts  mockData.ts  types.ts
src/pages/: LandingPage.tsx  StatsPage.tsx
src/personas/: definitions.ts
src/share/: imageGenerator.ts
src/stories/: StoryContainer.tsx
(+31 files in other folders)
