[project]
name = "vibechecked-skill"
version = "1.0.0"
description = "VibeChecked skill for Claude Code"
requires-python = ">=3.8"
dependencies = []

[tool.ruff]
target-version = "py38"
line-length = 120
src = ["skills"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
